<resources>
    <string name="app_name">IoT Socket</string>
    <string name="title_home">Overview</string>
    <string name="title_alarms">Alarms</string>
    <string name="title_commands">Commands</string>
    <string name="title_tasks">Tasks</string>
    <string name="dialog_option_yes">Yes</string>
    <string name="prompt_confirm_sending">Confirm Sending</string>
    <string name="prompt_blank_command">Blank Command</string>
    <string name="prompt_canceled">Canceled</string>
    <string name="dialog_option_no">No</string>
    <string name="prompt_command_sent">Command sent</string>
    <string name="operation_relay_on">Relay ON</string>
    <string name="operation_relay_off">Relay OFF</string>
    <string name="prompt_input_command">Input Command</string>
    <string name="operation_send_command">Send Command</string>
    <string name="operation_flip_relay">Flip Switch</string>
    <string name="text_peripheral">Peripheral</string>
    <string name="text_relay">Relay</string>
    <string name="text_led" translatable="false">LED</string>
    <string name="text_beeper">Beeper</string>
    <string name="text_pwm" translatable="false">PWM</string>
    <string name="text_sensor">Sensor</string>
    <string name="text_temperature">Temperature</string>
    <string name="text_pressure">Pressure</string>
    <string name="text_brightness">Brightness</string>
    <string name="text_system">System</string>
    <string name="text_time">Time</string>
    <string name="text_sample_text">Sample Text</string>
    <string name="text_offline">Offline</string>
    <string name="text_online">Online</string>
    <string name="text_on">ON</string>
    <string name="text_off">OFF</string>
    <string name="prompt_ack_timeout">Ack Timeout</string>
    <string name="prompt_connection_error">Connection Error</string>
    <string name="text_not_a_number" translatable="false">NaN</string>
    <string name="prompt_send_failed">Send Failed</string>
    <string name="text_interval_alarm_setting">Interval Alarm Setting</string>
    <string name="text_periodic">Periodic</string>
    <string name="text_once">Once</string>
    <string name="prompt_choose_date">Choose Date</string>
    <string name="prompt_choose_time">Choose Time</string>
    <string name="prompt_start">"Start"</string>
    <string name="prompt_end">End</string>
    <string name="text_set_alarm">Set Alarm</string>
    <string name="text_reset">Reset</string>
    <string name="text_remove_alarms">Remove Alarms</string>
    <string name="text_remove_tasks">Remove Tasks</string>
    <string name="text_tick_alarm_setting">Tick Alarm Setting</string>
    <string name="prompt_1_to_59" translatable="false">1~59</string>
    <string name="prompt_1_to_23" translatable="false">1~23</string>
    <string name="text_second_number">Second(s)</string>
    <string name="text_minute">Minute(s)</string>
    <string name="text_hour">Hour(s)</string>
    <string name="placeholder_tick_alarm_1">Tick On\nEvery</string>
    <string name="prompt_error_empty_command">Error: Empty command</string>
    <string name="text_basic_task">Basic Task</string>
    <string name="text_temperature_abbr">Temp</string>
    <string name="text_higher">Higher</string>
    <string name="text_lower">Lower</string>
    <string name="text_set_task">Set Task</string>
    <string name="placeholder_basic_task_1">If</string>
    <string name="placeholder_basic_task_2">is</string>
    <string name="placeholder_basic_task_3">than</string>
    <string name="placeholder_basic_task_4">, Switch ON</string>
    <string name="text_mapping_task">Mapping Task</string>
    <string name="placeholder_mapping_task_1">Map</string>
    <string name="placeholder_mapping_task_2">value</string>
    <string name="placeholder_mapping_task_3">From</string>
    <string name="placeholder_mapping_task_4">To</string>
    <string name="text_max_in">Max In</string>
    <string name="text_min_in">Min In</string>
    <string name="text_max_out">Max Out</string>
    <string name="text_min_out">Min Out</string>
    <string name="text_set_mapping_task">Set Mapping Task</string>
    <string name="text_bluetooth_sample_name" translatable="false">MTP-II</string>
    <string name="text_bluetooth_sample_mac" translatable="false">00:11:22:33:44:55</string>
    <string name="text_bluetooth_sample_rssi" translatable="false">-55</string>
    <string name="text_select_bluetooth_device">Select BT Device</string>
    <string name="text_use_bluetooth_connection">Use Bluetooth</string>
    <string name="text_use_mqtt_connection">Use MQTT</string>
    <string name="prompt_please_select_a_bluetooth_device_first">Please Select a Bluetooth Device First!</string>
    <string name="text_long_sample" translatable="false">This is a sample of long text, blah blah blah blah...</string>
    <string name="text_using_bluetooth_connection">Using Bluetooth Connection</string>
    <string name="text_reboot_system">Reboot System</string>
    <string name="text_reboot">Reboot</string>
    <string name="text_show_settings">Show Settings</string>
    <string name="text_wifi_settings">Wi-Fi Settings</string>
    <string name="text_ssid" translatable="false">SSID</string>
    <string name="text_password">Password</string>
    <string name="text_update_wifi_setting">Update Wi-Fi Setting</string>
    <string name="text_other_settings">Other Settings</string>
    <string name="text_calibrate">Calibrate</string>
    <string name="text_reset_to_default">Reset To Default</string>
    <string name="text_ahead">Ahead</string>
    <string name="text_lag">Lag</string>
    <string name="placeholder_time_diff_ahead_1">""</string>
    <string name="placeholder_time_diff_ahead_2">s ahead</string>
    <string name="placeholder_time_diff_behind_1">""</string>
    <string name="placeholder_time_diff_behind_2">s behind</string>
    <string name="placeholder_tick_alarm_2">""</string>
    <string name="text_device_data_out_of_sync">Device Data Out of Sync</string>
    <string name="text_command_copied">Command Copied</string>
    <string name="text_added">added</string>
    <string name="text_something_wrong">Something is Wrong</string>
    <string name="text_update_action">Update Action</string>
    <string name="text_flip">Flip</string>
    <string name="text_default_action_settings">Default Action Settings</string>
    <string name="text_timer">Timer</string>
    <string name="text_action">Action</string>
    <string name="placeholder_timer_1">After</string>
    <string name="text_hour_abbr">H</string>
    <string name="text_minute_abbr">M</string>
    <string name="text_second_abbr">S</string>
    <string name="placeholder_timer_2" >""</string>
    <string name="text_device_paired">Paired</string>
</resources>