<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_alarm"
        android:title="@string/title_alarms" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_task"
        android:title="@string/title_tasks" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_commands_black_24dp"
        android:title="@string/title_commands" />

</menu>