<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="mainActivityViewModel"
            type="com.maverick.iotsocket.ui.MainActivityViewModel" />

        <variable
            name="tasksViewModel"
            type="com.maverick.iotsocket.ui.tasks.TasksViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        tools:ignore="PrivateResource"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButtonRemoveTasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:clickable="true"
            android:contentDescription="@string/text_remove_tasks"
            android:enabled="@{mainActivityViewModel.isLoading ? false : true}"
            android:onClick="@{() -> mainActivityViewModel.mqttSendCommand(`task clear`)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_remove_tasks" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    android:padding="20dp"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/text_basic_task"
                            android:textColor="?android:attr/colorPrimary"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/placeholder_basic_task_1"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <View
                                style="@style/DividerVertical"
                                android:layout_margin="10dp" />

                            <RadioGroup
                                android:id="@+id/radioGroupBasicTaskCondition"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:checkedButton="@={tasksViewModel.basicTaskRadioGroupConditionCheckedId}"
                                android:orientation="vertical">

                                <RadioButton
                                    android:id="@+id/radioButtonBasicTaskConditionTemperature"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_temperature_abbr"
                                    android:textSize="20sp" />

                                <RadioButton
                                    android:id="@+id/radioButtonBasicTaskConditionBrightness"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_brightness"
                                    android:textSize="20sp" />

                                <RadioButton
                                    android:id="@+id/radioButtonBasicTaskConditionPressure"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_pressure"
                                    android:textSize="20sp" />
                            </RadioGroup>

                            <TextView
                                android:id="@+id/textView8"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:text="@string/placeholder_basic_task_2"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <View
                                style="@style/DividerVertical"
                                android:layout_margin="10dp" />

                            <RadioGroup
                                android:id="@+id/radioGroupBasicTaskType"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:checkedButton="@={tasksViewModel.basicTaskRadioGroupTypeCheckedId}"
                                android:orientation="vertical">

                                <RadioButton
                                    android:id="@+id/radioButtonBasicTaskTypeHigher"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_higher"
                                    android:textSize="20sp" />

                                <RadioButton
                                    android:id="@+id/radioButtonBasicTaskTypeLower"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/text_lower"
                                    android:textSize="20sp" />

                            </RadioGroup>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/placeholder_basic_task_3"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <EditText
                                android:id="@+id/editTextNumberBasicTaskInput"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:inputType="numberSigned"
                                android:minWidth="50dp"
                                android:onTextChanged="@{() -> tasksViewModel.updateBasicTaskValid()}"
                                android:text="@={tasksViewModel.basicTaskInput}"
                                android:importantForAutofill="no"
                                tools:ignore="LabelFor" />

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/placeholder_basic_task_4"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <Button
                            android:id="@+id/buttonSetBasicTask"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:enabled="@{tasksViewModel.basicTaskValid}"
                            android:minHeight="55dp"
                            android:onClick="@{() -> mainActivityViewModel.mqttSendCommand(tasksViewModel.getBasicTaskCommand())}"
                            android:text="@string/text_set_task" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_tick_alarm_setting"
                            android:textColor="?android:attr/colorPrimary"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="70dp" />


            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>