<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!--        <variable-->
        <!--            name="dashboardViewModel"-->
        <!--            type="com.maverick.iotsocket.ui.dashboard.DashboardViewModel" />-->
        <!--        <import type="android.view.View" />-->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.controlcenter.ControlCenterFragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginVertical="10dp"
                    app:cardBackgroundColor="?attr/colorSecondaryContainer"
                    app:cardCornerRadius="30dp"
                    app:cardElevation="10dp"
                    app:cardMaxElevation="12dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="false">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="2"
                            android:text="@string/text_alarm_setting"
                            android:textColor="?android:attr/colorPrimary"
                            android:textSize="22sp"
                            android:textStyle="bold" />

                        <RadioGroup
                            android:id="@+id/radio_group_alarm_type"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginVertical="5dp"
                            android:checkedButton="@id/radioButtonPeriodic"
                            android:orientation="horizontal">

                            <RadioButton
                                android:id="@+id/radioButtonPeriodic"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/text_periodic"
                                android:textSize="20sp" />

                            <RadioButton
                                android:id="@+id/radioButtonOnce"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/text_once"
                                android:textSize="20sp" />


                        </RadioGroup>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:animateLayoutChanges="true"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/prompt_start"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textStartDate"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:hint="@string/prompt_choose_date"
                                android:textSize="20sp"
                                android:visibility="gone"
                                tools:visibility="visible" />

                            <View
                                style="@style/DividerVertical"
                                android:layout_margin="10dp" />

                            <TextView
                                android:id="@+id/textStartTime"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:hint="@string/prompt_choose_time"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:animateLayoutChanges="true">

                            <TimePicker
                                android:id="@+id/timePickerStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                            <DatePicker
                                android:id="@+id/datePickerStart"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:animateLayoutChanges="true"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="1"
                                android:gravity="center"
                                android:text="@string/prompt_end"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/textEndDate"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:hint="@string/prompt_choose_date"
                                android:textSize="20sp"
                                android:visibility="gone"
                                tools:visibility="visible" />

                            <View
                                style="@style/DividerVertical"
                                android:layout_margin="10dp" />

                            <TextView
                                android:id="@+id/textEndTime"
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_weight="2"
                                android:gravity="center"
                                android:hint="@string/prompt_choose_time"
                                android:textSize="20sp" />

                        </LinearLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:animateLayoutChanges="true">

                            <TimePicker
                                android:id="@+id/timePickerEnd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                            <DatePicker
                                android:id="@+id/datePickerEnd"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:visibility="gone" />

                        </FrameLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:orientation="horizontal">

                            <Button
                                android:id="@+id/buttonResetAlarmInput"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginEnd="10dp"
                                android:minHeight="55dp"
                                android:text="@string/text_reset" />

                            <Button
                                android:id="@+id/buttonSetAlarm"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:minHeight="55dp"
                                android:text="@string/text_set_alarm" />
                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>


            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>